Fixed Issue with spacing + width exceeding 100%

--- a/aware-app/src/messaging-service/NavBar/NavBar.css
+++ b/aware-app/src/messaging-service/NavBar/NavBar.css
@@ -1,6 +1,6 @@
-.vertical-menu {
+#vertical-menu {
     background-color: #074f57;
-    position: relative;
+    display: block;
     height: 100%;
 }
 
